fix footer background color on narrow view

--- a/public/less/narrow-pc.less
+++ b/public/less/narrow-pc.less
@@ -13,3 +13,6 @@ body>header {
 		font-size : 28px;
 	}
 }
+body>footer {
+	background : #d1d1d1;
+}
