--- a/public/less/wide-pc.less
+++ b/public/less/wide-pc.less
@@ -456,8 +456,9 @@ color : #0416FF; */
 body>footer {
 	text-align : center;
 	font-size : 0.8em;
+	padding : 10px;
 	p {
-		margin : 10px;
+		margin : 0px;
 	}
 	a {
 		color : white;
